kubernetes/platform/config/longhorn/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-system-default
  namespace: longhorn-system
spec:
  description: "Allow Longhorn: inter-node storage traffic, CSI from all namespaces, management UI"
  endpointSelector: { }
  ingress:
    # Allow CSI driver requests from all namespaces (pods mounting volumes)
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9500"
              protocol: TCP
            - port: "9501"
              protocol: TCP
            - port: "9502"
              protocol: TCP
            - port: "9503"
              protocol: TCP
            - port: "9504"
              protocol: TCP
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9500"
              protocol: TCP
    # Allow management UI from gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: istio-gateway
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    # Allow webhooks from K8s API server
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    # Allow Kubernetes API access (6443 for node IPs, 443 for ClusterIP service)
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow inter-node storage replication (high ports)
    - toEntities:
        - cluster
    # Allow S3 backup to Garage or external S3
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    # Allow external S3 (AWS, Backblaze, etc.) for off-cluster backups
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
